test/while/var_in_body.lox
// error: Error at 'var': Expect expression on line 12 column 8
while (true) 
    var foo;
